--- a/_quarto.yml
+++ b/_quarto.yml
@@ -26,7 +26,9 @@ website:
       - about.qmd
 format:
   html:
-    theme: pulse
+    theme:
+      light: pulse
+      dark: darkly
     css: styles.css
 
 editor: source
