Removed all but forecast plots. Edited text. Include reference to DEL-S. Have sought data from BASIL investigators

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -28,7 +28,9 @@ website:
       - about.qmd
 format:
   html:
-    theme: darkly
+    theme:
+      light: pulse
+      dark: darkly
     css: styles.css
 
 editor: source
